Se agrego un nuevo nombre en la pestaña y nuevo parrafo

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style/estilos.css">
     <link rel="shortcut icon" href="img/icons8-oficina.png" type="image/x-icon">
-    <title>Página Web</title>
+    <title>Oficina Virtual</title>
 </head>
 
 <body>
@@ -44,13 +44,9 @@
 
                 <h2>Titulo del articulo</h2>
 
-                <p>Un texto es una composición de signos codificados en un sistema de escritura que forma una unidad de sentido. 
-                También es una composición de caracteres imprimibles generados por un algoritmo de cifrado que, aunque no tienen 
-                sentido para cualquier persona, sí puede ser descifrado por su destinatario original.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim saepe veniam amet similique. Fugit excepturi explicabo mollitia quod tenetur quis dicta voluptas, debitis laborum eius nihil ipsam quia maxime voluptatibus.</p>
                 
-                <p>Un texto es una composición de signos codificados en un sistema de escritura que forma una unidad de sentido. 
-                También es una composición de caracteres imprimibles generados por un algoritmo de cifrado que, aunque no tienen 
-                sentido para cualquier persona, sí puede ser descifrado por su destinatario original.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur sunt, velit accusamus totam corrupti necessitatibus. Qui reprehenderit consequuntur beatae. Incidunt eveniet sequi nulla quo libero minima deserunt mollitia! Corrupti, amet.</p>
             </article>
 
         </section>
